--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: The-Ethics-of-the-Dust_4701
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: generated
   image_path: cover.png
@@ -27,6 +27,7 @@ subjects:
 - !lcsh 'Conduct of life'
 - !lcsh 'Crystallography'
 - !lcc 'BJ'
+- GITenberg
 tableOfContents: The valley of diamonds -- The pyramid builders -- The Crystal life
   -- The crystal orders -- Crystal virtues -- Crystal quarrels -- Home virtues --
   Crystal caprice -- Crystal sorrows -- The Crystal rest.
